<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondaryActivity">

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:text="@string/height"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/weightEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heightTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="@string/weight"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

    <TextView
        android:id="@+id/sexTextView"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="@string/sex"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="@string/age"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexTextView" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weightTextView"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <EditText
        android:id="@+id/sexEditText"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="text"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sexTextView"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ageTextView"
        app:layout_constraintTop_toBottomOf="@+id/sexEditText" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="179dp"
        android:text="@string/calculate"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/bmi"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>